--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "embla-carousel-autoplay": "^8.2.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
+    "framer-motion": "^11.2.12",
     "genkit": "^1.18.0",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
