--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "vercel-build": "next build"
   },
   "dependencies": {
+    "@genkit-ai/googleai": "^1.18.0",
+    "@genkit-ai/next": "^1.18.0",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -45,6 +47,7 @@
     "firebase": "^11.9.1",
     "firebase-admin": "^12.2.0",
     "framer-motion": "^11.2.12",
+    "genkit": "^1.18.0",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
