--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "firebase": "^11.9.1",
     "firebase-admin": "^12.2.0",
     "framer-motion": "^11.2.12",
+    "fuse.js": "^7.0.0",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "react": "^18.3.1",
